--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -648,13 +648,8 @@ AGGTGCCTTTTACAAGC
 This would change the alignment and decrease) the resulting score.
 
 \section{Will the output of TMAP be the same if run twice?}
-TMAP will always produce the same output if run twice unless the \TT{-a 1} option and multiple threads (\TT{-n}) are used.
-Using the \TT{-a 1} option will output random hits for reads with multiple equaly likely mapping locations.
-TMAP uses a deterministic random seed so that when using only one thread the same random choice will be made.
-Nevertheless, when using multiple threads (\TT{-n}), the order in which the random function call is made by the threads is determined by the operating system's scheduling of the threads.
-Therefore, the random function may return a different random mapping for the same read upon a second execution of TMAP.
-
-TMAP has the abilty to soft clip bases during alignment, that is to not include in the alignment bases that are present in the read.  This may be useful to only map high quality portions of the read, for example if the 3' end of the read has many low quality bases called but their inclusion in the alignment results in many mismatches or insertions/deletions (indels).
+TMAP will always produce the same output if run twice, even when multiple threads (\TT{-n}) are used.
+This is enabled by using a complementary-multiply-with-carry random number generator, one per thread.
 
 \section{How does TMAP soft clip bases in the read?} 
 TMAP has the ability to soft clip bases during alignment, that is to not include in the alignment bases that are present in the read.  
