* adding in forward/reverse search options in map3; forward search is much faster at small cost in sens/acc

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -403,6 +403,9 @@ Specifies the fraction of seed positions that are under the maximum (\TT{--max-s
 \subsubsection{\TT{--seed-step INT}}
 Specifies the number of bases to increase the seed while repetitive (-1 to disable).
 
+\subsubsection{\TT{--fwd-search}}
+Specifies to perform a forward search instead of a reverse search.
+
 \section{tmap mapvsw}
 \label{sec:mapvsw}
 The \BF{mapvsw} is a command to map sequences to a reference genome.
