* --skip-seed-frac for map3 was misspecified

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -406,7 +406,7 @@ Specifies the number of bases to increase the seed while repetitive (-1 to disab
 \subsubsection{\TT{--fwd-search}}
 Specifies to perform a forward search instead of a reverse search.
 
-\subsubsection{\TT{--skip-seed-frac}}
+\subsubsection{\TT{--skip-seed-frac FLOAT}}
 Specifies the fraction of a seed to skip when a lookup succeeds.
 \section{tmap mapvsw}
 \label{sec:mapvsw}
