* adding in pairing options; code documentation and manual update are future work

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -255,7 +255,7 @@ Specifies to soft clip only the last base of the key sequence.
 Specifies that SFF specific tags should be added to the output SAM file.
 See \autoref{sec:samformat} for more informaton.
 
-\subsubsection{\TT{-S,--ignore-flowgram}}
+\subsubsection{\TT{-N,--ignore-flowgram}}
 Specifies to not use the flowgram, otherwise uses the flowgram for flowspace re-alignment when available.
 
 \subsubsection{\TT{-G,--remove-sff-clipping}}
