--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -265,15 +265,15 @@ Specifies to not remove bases and qualities based on the adapter and quality cli
 These options control how TMAP uses and outputs information about the paired end or mate pair reads.
 Pairing will be performed when exactly two input read files are given using the \TT{-r} option twice.
 
-\subsubsection{\TT{-b,--ins-size-mean FLOAT}}
-Specifies the expected mean insert size.
-
-\subsubsection{\TT{-c,--ins-size-std FLOAT}}
-Specifies the expected insert size standard deviations.
-
-\subsubsection{\TT{-d,--ins-size-std-max-num FLOAT}}
-Specifies the maximum number of standard deviations for a pair to be proper.
-See \autoref{sec:samformat} for more informaton about proper pairs.
+\subsubsection{\TT{-Q,--pairing}}
+Specifies the pairing orientation.
+This will override \TT{-S} and \TT{-P}.
+\begin{enumerate}
+	\setcounter{enumi}{-1} % start at zero
+	\item no pairing is to be performed
+	\item 1 - mate pairs (\TT{-S 0 -P 1})
+	\item 2 - paired end (\TT{-S 1 -P 0})
+\end{enumerate}
 
 \subsubsection{\TT{-S,--strandedness}}
 Specifies the strand orientation between the pairs.
@@ -290,6 +290,16 @@ Specifies that position orientation between the pairs.
 	\item the first read of the pair (A) is before the second read of the pair (B).
 	\item the second read of the pair (B) is before the first read of the pair (A).
 \end{enumerate}
+
+\subsubsection{\TT{-b,--ins-size-mean FLOAT}}
+Specifies the expected mean insert size.
+
+\subsubsection{\TT{-c,--ins-size-std FLOAT}}
+Specifies the expected insert size standard deviations.
+
+\subsubsection{\TT{-d,--ins-size-std-max-num FLOAT}}
+Specifies the maximum number of standard deviations for a pair to be proper.
+See \autoref{sec:samformat} for more informaton about proper pairs.
 
 \section{tmap index}
 \label{sec:index}
