* parameterizing banding unrolling (--no-unroll-banding)

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -180,6 +180,9 @@ Specifies to remove duplicate mappings that occur within this bp window.
 \subsubsection{\TT{-B,--max-seed-band INT}}
 Specifies the window in bases in which to group seeds.
 
+\subsubsection{\TT{-U,--no-unroll-banding}}
+Specifies to not unroll the grouped seeds from banding if multiple alignments are found
+
 \subsubsection{\TT{-T,--score-thres INT}}
 Specifies the number of multiples of the match score (\TT{-A}) for the minimum scoring threshold.
 
