* updating manual with read rescue options

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -304,6 +304,12 @@ Specifies the expected insert size standard deviations.
 Specifies the maximum number of standard deviations for a pair to be proper.
 See \autoref{sec:samformat} for more informaton about proper pairs.
 
+\subsubsection{\TT{-L,--read-rescue}}
+Specifies to perform read rescuing during pairing.
+
+\subsubsection{\TT{-l,--read-rescue-std-num FLOAT}}
+Specifies the number of insert size standard deviations to search around the inferred rescue position.
+
 \section{tmap index}
 \label{sec:index}
 The \BF{index} command creates a compact version of the reference genome and associated index.
