* updating the manual to include the "--narrow-rmdup" option

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -430,6 +430,9 @@ Specifies the maximum number of top-scoring nodes to keep on each iteration.
 \subsubsection{\TT{--seeds-rev INT}}
 Specifies the maximum seeding interval size for extending a mapping.
 
+\subsubsection{\TT{--narrow-rmdup}}
+Specifies to remove duplicate seeds for narrow suffix array.
+
 \section{tmap map3}
 \label{sec:map3}
 The \BF{map3} is a command to map sequences to a reference genome.
