--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -481,6 +481,12 @@ Specifies the fraction of seed positions that are under the maximum (\TT{--max-s
 \subsubsection{\TT{--max-iwidth INT}}
 Specifies the maximum interval size to accept a hit.
 
+\subsubsection{\TT{--max-repr INT}}
+Specified the maximum representitive hits for repetitive hits.
+
+\subsubsection{\TT{--rand-repr}}
+Specifies to choose the representitive hits randomly, otherwise uniformly.
+
 \subsubsection{\TT{--min-seed-length INT}}
 Specifies the minimum number of bases to use to seed.
 With a value of $-1$ will set the seed length to $\left(ceiling(log_4(R)) + 2\right)$ where $R$ is the reference genome length.
