* auto-detecting the number of threads to use by default

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -191,6 +191,7 @@ Specifies the number of reads to cache or load into memory at one time.
 
 \subsubsection{\TT{-n,--num-threads INT}}
 Specifies the number of threads to run.
+The default value will be auto-detected on the system.
 
 \subsubsection{\TT{-a,--aln-output-mode INT}}
 Specifies the output filter for the mappings.
