* map2 may try to convert to many hits to chr/pos; adding --max-seed-hits for map2

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -418,6 +418,9 @@ See \autoref{sec:commonoptions} for common options that are in use in this comma
 
 \subsection{Usage}
 
+\subsubsection{\TT{--max-seed-hits INT}}
+Specifies the maximum number of CALs allowed to be returned by a seed before it is ignored.
+
 \subsubsection{\TT{--length-coef FLOAT}}
 Specifies the coefficient to adjust the mapping score threshold based on the read length.
 Given a $l$-long read, the threshold for a mapping to be retained is $a*max\{T,c*log(l)\}$, where $a$ is the match score (\TT{-A}) and $T$ is the minimum score threshold (\TT{-T}).
