--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -559,6 +559,9 @@ If this option is given, the mappings from the previous stage are added to any m
 \subsubsection{\TT{--stage-seed-freq-cutoff FLOAT}}
 Specifies the minimum frequency a seed must occur in order to be considered for mapping.
 
+\subsubsection{\TT{--stage-seed-max-length INT}}
+Specifies the length of the prefix of the read to consider during seeding.
+
 \section{tmap server}
 \label{sec:server}
 The \BF{server} command loads the reference genome index and data into shared memory.
