--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -211,6 +211,12 @@ The ``PG'', ``FO'', and ``KS'' tags should not be specified in this string; they
 Alternatively, multiple \TT{-R} options can also be used to populate the RG line. 
 For example, \TT{-R CN:SEQUENCING\_CENTER -R PG:TMAP -R PL:IONTORRENT} will populate the \TT{CN}, \TT{PG}, and \TT{PL} tags in the RG record.
 
+\subsubsection{\TT{-D,--bidirectional}}
+Specifies the input reads are to be annotated as bidirectional using the XB SAM record optional tag.
+
+\subsubsection{\TT{-I,--use-seq-equal}}
+Specifies to use the '=' symbol in the SEQ field.
+
 \subsubsection{\TT{-j,--input-bz2}, \TT{-z,--input-gz}}
 Specifies that the input is bzip2 (\TT{-j}) or gzip (\TT{-z}) compressed.
 This is auto-recognized if the input file name has the extension \TT{.bz2} for bzip2 and \TT{.gz} for gzip.
