--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -261,9 +261,9 @@ Specifies the key sequence ([ACGT]{4+} or ``file'' to obtain it from the input f
 \subsubsection{\TT{-y,--softclip-key}}
 Specifies to soft clip only the last base of the key sequence.
 
-\subsubsection{\TT{-Y,--sam-sff-tags}}
-Specifies that SFF specific tags should be added to the output SAM file.
-See \autoref{sec:samformat} for more informaton.
+\subsubsection{\TT{-Y,--sam-flowspace-tags}}
+Specifies that flowspace specific tags should be added to the output SAM file when available.
+See \autoref{sec:samformat} for more information.
 
 \subsubsection{\TT{-N,--ignore-flowgram}}
 Specifies to not use the flowgram, otherwise uses the flowgram for flowspace re-alignment when available.
@@ -625,7 +625,7 @@ Specific details can be found below.
 The RG field can be populated using the \TT{-R} option.
 By default the \TT{ID} and \TT{PG} tags are included.
 When specifying an RG line, do not include the PG tag as it will be populated by tmap:
-If the input is an SFF file and the \TT{-Y} option is used, then a comment line will be placed in the header with the following tags:
+If the input is a file with flowspace information (SFF or SAM/BAM) and the \TT{-Y} option is used, then a comment line will be placed in the header with the following tags:
 RG, FO, and KS.
 The RG tag in the comment is the associated read group ID.
 The FO and KS tags indicate the flow order and the key sequence.
