* updating the tmap book to include the new stage options

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -600,6 +600,12 @@ If this option is given, the mappings from the previous stage are added to any m
 \subsubsection{\TT{--stage-seed-freq-cutoff FLOAT}}
 Specifies the minimum frequency a seed must occur in order to be considered for mapping.
 
+\subsubsection{\TT{--stage-seed-freq-cutoff-group-frac FLOAT}}
+Specifies if more than this fraction of groups were filtered, keep representative hits.
+                  
+\subsubsection{\TT{--stage-seed-freq-cutoff-rand-repr INT}}
+Specifies the number of representative hits to keep.
+
 \subsubsection{\TT{--stage-seed-max-length INT}}
 Specifies the length of the prefix of the read to consider during seeding.
 
