* if using random representatitives, always keep the one with the most seeds in addition to the other representatives

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -605,6 +605,7 @@ Specifies if more than this fraction of groups were filtered, keep representativ
                   
 \subsubsection{\TT{--stage-seed-freq-cutoff-rand-repr INT}}
 Specifies the number of representative hits to keep.
+In addition, the group with most seeds will always be kept if this option has a greater than zero value.
 
 \subsubsection{\TT{--stage-seed-max-length INT}}
 Specifies the length of the prefix of the read to consider during seeding.
