* adding --stage-seed-freq-cutoff-min-groups option to specify the minumum number of groups left after seed frequency filtering

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -607,6 +607,9 @@ Specifies if more than this fraction of groups were filtered, keep representativ
 Specifies the number of representative hits to keep.
 In addition, the group with most seeds will always be kept if this option has a greater than zero value.
 
+\subsubsection{\TT{--stage-seed-freq-cutoff-min-groups INT}}
+Specifies the minimum of groups required after the filter has been applied, otherwise iteratively reduce the filter.
+
 \subsubsection{\TT{--stage-seed-max-length INT}}
 Specifies the length of the prefix of the read to consider during seeding.
 
