--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -181,9 +181,9 @@ Specifies to remove duplicate mappings that occur within this bp window.
 \subsubsection{\TT{-B,--max-seed-band INT}}
 Specifies the window in bases in which to group seeds prior to Smith Waterman.
 
-\subsubsection{\TT{-U,--no-unroll-banding}}
-Specifies to not unroll the grouped seeds from banding if multiple alignments are found.
-By default, if multiple best scoring alignments are found within a group of seeds (see \TT{-B}), the seeds are ungrouped and Smith Waterman is performed on each seed.
+\subsubsection{\TT{-U,--unroll-banding}}
+Specifies to unroll the grouped seeds from banding if multiple alignments are found.
+With this option, if multiple best scoring alignments are found within a group of seeds (see \TT{-B}), the seeds are ungrouped and Smith Waterman is performed on each seed.
 
 \subsubsection{\TT{-T,--score-thres INT}}
 Specifies the number of multiples of the match score (\TT{-A}) for the minimum scoring threshold.
