* adding in reference for map4

--- a/doc/tmap-book.bib
+++ b/doc/tmap-book.bib
@@ -31,6 +31,16 @@
 	Month="Mar"
 }
 
+% 22569178 
+@Article{Fastmap,
+	Author="Li, H. ",
+	Title="{{E}xploring single-sample {S}{N}{P} and {I}{N}{D}{E}{L} calling with whole-genome de novo assembly}",
+	Journal="Bioinformatics",
+	Year="2012",
+	Pages=" ",
+	Month="May"
+}
+
 % 19505943 
 @Article{SAM-format,
 	Author="Li, H.  and Handsaker, B.  and Wysoker, A.  and Fennell, T.  and Ruan, J.  and Homer, N.  and Marth, G.  and Abecasis, G.  and Durbin, R. ",
