--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -505,7 +505,7 @@ Specifies the fraction of a seed to skip when a lookup succeeds.
 \section{tmap map4}
 \label{sec:map4}
 The \BF{map4} is a command to map sequences to a reference genome.
-This algorithm is well suited for longer reads ($\geq 100$bp) and is a variation of the super-maximal exact matching (SMEM) algorithm proposed by Heng Li.
+This algorithm is well suited for longer reads ($\geq 100$bp) and is a variation of the super-maximal exact matching (SMEM) algorithm proposed by Heng Li (\cite{Fastmap}).
 SMEMs are equivalent to returning all longest common substrings between the read and reference.
 
 See \autoref{sec:commonoptions} for common options that are in use in this command.
